welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:4: error: value - is not a member of scala.collection.immutable.Range.Inclusive
  for (i<- 1 to getMondeHauteur()-){
                                 ^